tests/NormalTests/paczka1/fuzzy1/39625929.err
Error in line 9: HEDmd A878 30,5
Error in line 14: QGfxx A878 6,3
Error in line 22: jp7 A238 20,8
Error in line 17: yNsHgLiUa A238 46,8
Error in line 19: A238 A238 18,4
